<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter Client</string>
    <string name="action_settings">Settings</string>
    <string name="action_compose">Compose</string>
    <string name="action_profile">Profile</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect with Twitter</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="button_label_tweet">Tweet</string>
    <string name="tweet_compose_caption">What\'s happening?</string>
    <string name="tweet_charatcersize_count">140</string>
    <string name="title_activity_tweet_detail">Tweet</string>
    <string name="title_activity_profile">Profile</string>
    <string name="tweets_label">TWEETS</string>
    <string name="following_label">FOLLOWING</string>
    <string name="followers_label">FOLLOWERS</string>
    <string name="title_activity_following">Following</string>
	<string name="title_activity_search">Search</string>
	<string name="lbQuery">Search Twitter</string>
</resources>