<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:twitterclient="http://schemas.android.com/apk/res-auto"
	>
	<item
		android:id="@+id/compose"
		android:orderInCategory="100"
		twitterclient:showAsAction="ifRoom"
		android:icon="@drawable/ic_compose"
		android:title="@string/action_compose"/>
	<item
		android:id="@+id/profile"
		android:orderInCategory="100"
		twitterclient:showAsAction="ifRoom"
		android:icon="@drawable/ic_profile"
		android:title="@string/action_profile"/>
	
	 <item android:id="@+id/search"
          android:orderInCategory="100"
          android:title="@string/action_search"
          android:icon="@drawable/ic_search"
          twitterclient:showAsAction="ifRoom|collapseActionView"
          twitterclient:actionViewClass="android.support.v7.widget.SearchView" />
	 <item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		twitterclient:showAsAction="never"
		android:title="@string/action_settings"/>
</menu>
