<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="${relativePackage}.${activityClass}">

	<RelativeLayout
	    android:id="@+id/rlProfile"
    	android:layout_width="match_parent"
    	android:layout_alignParentTop="true"
    	android:background="#A2A7B8"
    	android:layout_height="200dp">

		<ImageView
		    android:background="@android:color/white"
		    android:id="@+id/ivProfile"
		   	android:layout_width="60dp" 
			android:layout_height="60dp"
			android:scaleType="fitCenter"
			android:layout_marginTop="30dp"
			android:padding="2dp"
		    android:layout_centerHorizontal="true"
		    />

		<TextView
		    android:id="@+id/tvName"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_below="@+id/ivProfile"
		    android:layout_marginTop="05dp"
		    android:textSize="18sp"
			android:textStyle="bold"
			android:textColor="#ffffff"
		    android:textAppearance="?android:attr/textAppearanceMedium"/>

		<TextView
		    android:id="@+id/tvUserName"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_below="@+id/tvName"
		    android:layout_marginTop="05dp"
	    	android:textColor="#bbbbbb"
			android:textSize="16sp"
		    android:textAppearance="?android:attr/textAppearanceMedium"/>
	</RelativeLayout>	
	<LinearLayout 
	    android:id="@+id/llSummary"
	    android:layout_width="match_parent"
	    android:orientation="horizontal"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/rlProfile"
	    android:showDividers="middle"
	    android:divider="@drawable/custom_dividers"
	    >
	
			<LinearLayout
	    		android:id="@+id/llTweets"
	    		android:layout_width="0dp"
	    		android:layout_weight="1"
	    		android:orientation="vertical"
	    		android:layout_height="match_parent">
	    		
			    		<TextView
						    android:id="@+id/tvTweetsCount"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:layout_gravity="left"
						    android:layout_marginTop="10dp"
						    android:layout_marginLeft="10dp"
						    android:textSize="15sp"
						    android:textColor="#7e7e7e"
						    android:textStyle="bold"
						    android:textAppearance="?android:attr/textAppearanceMedium"/>
			    		
			    		<TextView
						    android:id="@+id/lbTweetsCount"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:layout_marginTop="05dp"
						    android:layout_marginLeft="10dp"
						    android:text="@string/tweets_label"
						    android:textColor="#bbbbbb"
							android:textSize="13sp"
						    android:textAppearance="?android:attr/textAppearanceMedium"/>
			</LinearLayout>
			<LinearLayout
	    		android:id="@+id/llFollowing"
	    		android:layout_width="0dp"
	    		android:layout_weight="1"
	    		android:orientation="vertical"
	    		android:layout_height="match_parent">
	    		
			    		<TextView
						    android:id="@+id/tvFollowingCount"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:layout_gravity="left"
						    android:layout_marginTop="10dp"
						    android:layout_marginLeft="10dp"
						    android:textSize="15sp"
						    android:textColor="#7e7e7e"
						    android:textStyle="bold"
						    android:textAppearance="?android:attr/textAppearanceMedium"/>
			    		
			    		<TextView
						    android:id="@+id/lbFollowingCount"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:layout_marginTop="05dp"
						    android:layout_marginLeft="10dp"
						    android:text="@string/following_label"
						    android:textColor="#bbbbbb"
							android:textSize="13sp"
						    android:textAppearance="?android:attr/textAppearanceMedium"/>
			</LinearLayout>

			
			<LinearLayout
	    		android:id="@+id/llFollowers"
	    		android:layout_width="0dp"
	    		android:layout_weight="1"
	    		android:orientation="vertical"
	    		android:layout_height="match_parent">
	    		
			    		<TextView
						    android:id="@+id/tvFollowersCount"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:layout_gravity="left"
						    android:layout_marginTop="10dp"
						    android:layout_marginLeft="10dp"
						    android:textSize="15sp"
						    android:textColor="#7e7e7e"
						    android:textStyle="bold"
						    android:textAppearance="?android:attr/textAppearanceMedium"/>
			    		
			    		<TextView
						    android:id="@+id/lbFollowersCount"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:layout_marginTop="05dp"
						    android:layout_marginLeft="10dp"
						    android:text="@string/followers_label"
						    android:textColor="#bbbbbb"
							android:textSize="13sp"
						    android:textAppearance="?android:attr/textAppearanceMedium"/>
			</LinearLayout>        
	</LinearLayout>
	    
 </RelativeLayout>
    
	


